--- a/cnwebsite/package.json
+++ b/cnwebsite/package.json
@@ -34,12 +34,13 @@
     "@docusaurus/core": "2.0.0-alpha.70",
     "@docusaurus/plugin-pwa": "2.0.0-alpha.70",
     "@docusaurus/preset-classic": "2.0.0-alpha.70",
-    "docusaurus-plugin-sass": "^0.1.11",
+    "docusaurus-plugin-sass": "^0.2.1",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-github-btn": "^1.2.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-github-btn": "^1.2.0",
+    "sass": "^1.35.1"
   },
   "devDependencies": {
     "alex": "^9.0.1",
