--- a/cnwebsite/package.json
+++ b/cnwebsite/package.json
@@ -30,23 +30,35 @@
     "lintv": "cd ../ && alex",
     "postinstall": "cd ../ && patch-package"
   },
+  "browserslist": {
+    "production": [
+      ">0.5%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.70",
-    "@docusaurus/plugin-pwa": "2.0.0-alpha.70",
-    "@docusaurus/preset-classic": "2.0.0-alpha.70",
+    "@docusaurus/core": "2.0.0-beta.4",
+    "@docusaurus/plugin-pwa": "2.0.0-beta.4",
+    "@docusaurus/preset-classic": "2.0.0-beta.4",
     "docusaurus-plugin-sass": "^0.2.1",
-    "patch-package": "^6.2.2",
+    "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-github-btn": "^1.2.0",
-    "sass": "^1.35.1"
+    "sass": "^1.37.5"
   },
   "devDependencies": {
-    "alex": "^9.0.1",
-    "fs-extra": "^9.0.1",
-    "glob": "^7.1.6",
-    "glob-promise": "^3.4.0",
+    "alex": "^9.1.0",
+    "fs-extra": "^10.0.0",
+    "glob": "^7.1.7",
+    "glob-promise": "^4.2.0",
     "path": "^0.12.7"
   }
 }
