--- a/cnwebsite/package.json
+++ b/cnwebsite/package.json
@@ -43,9 +43,9 @@
     ]
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.4",
-    "@docusaurus/plugin-pwa": "2.0.0-beta.4",
-    "@docusaurus/preset-classic": "2.0.0-beta.4",
+    "@docusaurus/core": "^2.0.0-beta.6",
+    "@docusaurus/plugin-pwa": "^2.0.0-beta.6",
+    "@docusaurus/preset-classic": "^2.0.0-beta.6",
     "docusaurus-plugin-sass": "^0.2.1",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
@@ -55,6 +55,7 @@
     "sass": "^1.37.5"
   },
   "devDependencies": {
+    "@docusaurus/types": "^2.0.0-beta.6",
     "alex": "^9.1.0",
     "fs-extra": "^10.0.0",
     "glob": "^7.1.7",
