--- a/cnwebsite/package.json
+++ b/cnwebsite/package.json
@@ -27,8 +27,7 @@
     "prettier:diff": "yarn nit:source",
     "test": "yarn build",
     "lint": "cd ../ && alex .",
-    "lintv": "cd ../ && alex",
-    "postinstall": "cd ../ && patch-package"
+    "lintv": "cd ../ && alex"
   },
   "browserslist": {
     "production": [
@@ -47,12 +46,11 @@
     "@docusaurus/plugin-pwa": "^2.0.0-beta.14",
     "@docusaurus/preset-classic": "^2.0.0-beta.14",
     "docusaurus-plugin-sass": "^0.2.1",
-    "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0",
+    "esbuild-loader": "2.13.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-github-btn": "^1.2.1",
-    "sass": "^1.43.4"
+    "sass": "^1.46.0"
   },
   "devDependencies": {
     "@docusaurus/types": "^2.0.0-beta.14",
