--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base    = ""
-  publish = "website/build"
-  command = "yarn && cd website && yarn build"
+  publish = "cnwebsite/build"
+  command = "yarn && cd cnwebsite && yarn build"
 
 [context.production.environment]
   NODE_VERSION = "16.15.0"
@@ -16,7 +16,7 @@
   package = "netlify-plugin-cache"
   [plugins.inputs]
     paths = [
-      "website/node_modules/.cache",
+      "cnwebsite/node_modules/.cache",
     ]
 
 [[headers]]
