--- a/netlify.toml
+++ b/netlify.toml
@@ -26,6 +26,8 @@
     public, 
     max-age=604800, 
     s-maxage=43200'''
+
+[[headers]]
   for = "/movies.json"
     [headers.values]
     Access-Control-Allow-Origin = "*"
